--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyMapController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onSelectNodeClick" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyMapController">
    <children>
       <Separator layoutX="13.0" prefHeight="100.0" prefWidth="575.0">
          <padding>
@@ -29,18 +30,21 @@
       </HBox>
       <HBox layoutX="13.0" layoutY="99.0" spacing="15.0">
          <children>
-            <ImageView fitHeight="282.0" fitWidth="414.0">
+            <ImageView fx:id="map" fitHeight="282.0" fitWidth="414.0" onMouseClicked="#onMouseClick">
                <image>
                   <Image url="@images/bwhpikemap.gif" />
                </image>
             </ImageView>
-            <Button mnemonicParsing="false" text="Add Location" />
-            <ImageView fitHeight="32.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+            <Button fx:id="add_loc" mnemonicParsing="false" onAction="#onAddLocClick" text="Add Location" />
+            <ImageView fx:id="trash_can" fitHeight="32.0" fitWidth="24.0" onMouseClicked="#onTrashCanClick" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/59-512.png" />
                </image>
             </ImageView>
          </children>
       </HBox>
+      <Button fx:id="add_loc_cancel" layoutX="442.0" layoutY="354.0" mnemonicParsing="false" onAction="#onAddLocCancelClick" prefHeight="27.0" prefWidth="73.0" text="Cancel" visible="false" />
+      <Button fx:id="delete_loc_cancel" layoutX="452.0" layoutY="364.0" mnemonicParsing="false" onAction="#onDeleteLocCancelClick" prefHeight="27.0" prefWidth="73.0" text="Cancel" visible="false" />
+      <Label fx:id="mode" layoutX="442.0" layoutY="139.0" textFill="RED" />
    </children>
 </AnchorPane>
