--- a/src/main/resources/DoctorPage.fxml
+++ b/src/main/resources/DoctorPage.fxml
@@ -10,75 +10,120 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UserController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UserController">
    <children>
       <ImageView fitHeight="54.0" fitWidth="189.0" layoutX="14.0" layoutY="14.0">
          <image>
             <Image url="@images/cfLLaKI.png" />
          </image>
       </ImageView>
-      <HBox alignment="CENTER" layoutX="406.0" layoutY="28.0" spacing="10.0">
+      <HBox alignment="CENTER" layoutX="1018.0" layoutY="28.0" spacing="10.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="(Doctor Name)" />
             <Button fx:id="logout_btn" mnemonicParsing="false" onAction="#onLogoutClick" text="Log Out" />
          </children>
       </HBox>
-      <ImageView fitHeight="306.0" fitWidth="267.0" layoutX="169.0" layoutY="88.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="692.0" fitWidth="593.0" layoutX="304.0" layoutY="94.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
          </image>
       </ImageView>
-      <HBox layoutX="91.0" layoutY="90.0" prefHeight="180.0" prefWidth="421.0">
+      <Separator layoutX="13.0" layoutY="80.0" prefHeight="0.0" prefWidth="1174.0" />
+      <VBox alignment="TOP_CENTER" layoutX="415.0" layoutY="494.0" spacing="15.0">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="220.0" prefWidth="210.0" spacing="15.0">
+            <Label text="EMERGENCY" textFill="RED">
+               <font>
+                  <Font size="60.0" />
+               </font>
+            </Label>
+            <Label text="(Details)">
+               <font>
+                  <Font size="23.0" />
+               </font></Label>
+            <Button mnemonicParsing="false" text="Mark Completed">
+               <font>
+                  <Font size="23.0" />
+               </font></Button>
+         </children>
+      </VBox>
+      <GridPane alignment="TOP_CENTER" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <VBox alignment="TOP_CENTER" prefHeight="300.0" prefWidth="599.0" spacing="50.0" GridPane.columnIndex="1">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Make a Request:" />
-                  <MenuButton mnemonicParsing="false" text="Type of Request">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                  </MenuButton>
-                  <TextField alignment="CENTER" promptText="Room No." />
-                  <Button mnemonicParsing="false" text="Request" />
-               </children>
-               <padding>
-                  <Insets right="30.0" top="25.0" />
-               </padding>
-            </VBox>
-            <VBox alignment="TOP_CENTER" prefHeight="191.0" prefWidth="211.0" spacing="15.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To Be Completed:" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="To Be Completed:">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Text>
                   <MenuButton mnemonicParsing="false" text="My Requests">
                      <items>
                         <MenuItem mnemonicParsing="false" text="Action 1" />
                         <MenuItem mnemonicParsing="false" text="Action 2" />
                      </items>
+                     <font>
+                        <Font size="23.0" />
+                     </font>
                   </MenuButton>
-                  <Button mnemonicParsing="false" text="Mark Completed" />
+                  <Button mnemonicParsing="false" text="Mark Completed">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Button>
                </children>
                <padding>
-                  <Insets left="30.0" top="25.0" />
+                  <Insets left="30.0" right="30.0" top="25.0" />
+               </padding>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="300.0" prefWidth="587.0" spacing="50.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Make a Request:">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Text>
+                  <MenuButton mnemonicParsing="false" text="Type of Request">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Action 1" />
+                      <MenuItem mnemonicParsing="false" text="Action 2" />
+                    </items>
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </MenuButton>
+                  <TextField alignment="CENTER" promptText="Room No.">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="70.0" right="70.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button mnemonicParsing="false" text="Request">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets left="30.0" right="30.0" top="25.0" />
                </padding>
             </VBox>
          </children>
-      </HBox>
-      <Separator layoutX="13.0" layoutY="80.0" prefHeight="0.0" prefWidth="575.0" />
-      <VBox alignment="TOP_CENTER" layoutX="214.0" layoutY="270.0" spacing="15.0">
-         <children>
-            <Label text="EMERGENCY" textFill="RED">
-               <font>
-                  <Font size="28.0" />
-               </font>
-            </Label>
-            <Label text="(Details)" />
-            <Button mnemonicParsing="false" text="Mark Completed" />
-         </children>
-      </VBox>
+      </GridPane>
    </children>
 </AnchorPane>
