--- a/src/main/resources/PathfindPage.fxml
+++ b/src/main/resources/PathfindPage.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.Double?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Polyline?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PathfindController">
@@ -28,9 +33,36 @@
         <content>
           <AnchorPane layoutX="-500.0" layoutY="-500.0" minHeight="0.0" minWidth="0.0" prefHeight="1050.0" prefWidth="1250.0">
                <children>
-                  <ImageView fitHeight="3400.0" fitWidth="5000.0" layoutX="-2100.0" layoutY="-550.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" layoutX="-2100.0" layoutY="-550.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/02_thesecondfloor.png" />
+                     </image>
+                  </ImageView>
+                   <Polyline fx:id="path_polyline" fill="#ff000000" stroke="RED" strokeLineCap="ROUND" strokeWidth="8.0">
+                       <points>
+                           <Double fx:value="-50.0" />
+                           <Double fx:value="-40.0" />
+                           <Double fx:value="50.0" />
+                           <Double fx:value="-40.0" />
+                           <Double fx:value="0.0" />
+                           <Double fx:value="60.0" />
+                           <Double fx:value="-50.0" />
+                           <Double fx:value="-40.0" />
+                       </points>
+                       <effect>
+                           <Lighting diffuseConstant="1.42" specularConstant="0.95" specularExponent="10.22" surfaceScale="2.9">
+                               <bumpInput>
+                                   <Shadow height="11.12" radius="8.215" width="23.74" />
+                               </bumpInput>
+                               <light>
+                                   <Light.Distant />
+                               </light>
+                           </Lighting>
+                       </effect>
+                   </Polyline>
+                  <ImageView fx:id="destination_img" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/destinationIcon.png" />
                      </image>
                   </ImageView>
                </children>
