--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomePageController">
    <children>
       <ImageView fitHeight="54.0" fitWidth="189.0" layoutX="14.0" layoutY="14.0">
          <image>
@@ -36,9 +36,9 @@
             <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
          </image>
       </ImageView>
-      <VBox alignment="TOP_CENTER" layoutX="405.0" layoutY="94.0" prefHeight="293.0" prefWidth="404.0" spacing="50.0">
+      <VBox alignment="TOP_CENTER" layoutY="120.0" prefHeight="438.0" prefWidth="1200.0" spacing="50.0">
          <children>
-            <MenuButton mnemonicParsing="false" text="Quick Locations">
+            <MenuButton contentDisplay="CENTER" mnemonicParsing="false" text="Quick Locations">
               <items>
                 <MenuItem mnemonicParsing="false" text="Exit" />
                 <MenuItem mnemonicParsing="false" text="Cafeteria" />
@@ -49,41 +49,30 @@
                   <Font size="23.0" />
                </font>
             </MenuButton>
-            <MenuButton mnemonicParsing="false" text="Named Locations">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Exit" />
-                  <MenuItem mnemonicParsing="false" text="Cafeteria" />
-                  <MenuItem mnemonicParsing="false" text="Reception" />
-                  <MenuItem mnemonicParsing="false" text="Restroom" />
-               </items>
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </MenuButton>
-            <TextField alignment="CENTER" prefHeight="27.0" prefWidth="100.0" promptText="Room No.">
-               <VBox.margin>
-                  <Insets left="50.0" right="50.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </TextField>
+            <ComboBox fx:id="combobox_start" promptText="Select Location . . ." style="-fx-font-size: 23;" />
+            <ComboBox fx:id="combobox_end" promptText="Select Location . . ." style="-fx-font-size: 23;" />
             <CheckBox mnemonicParsing="false" text="Stairs">
                <font>
                   <Font size="23.0" />
-               </font></CheckBox>
+               </font>
+            </CheckBox>
             <Button fx:id="pathfind" mnemonicParsing="false" onAction="#onPathfindClick" text="Directions">
                <font>
                   <Font size="23.0" />
-               </font></Button>
+               </font>
+            </Button>
          </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <padding>
-            <Insets top="25.0" />
-         </padding>
       </VBox>
+      <Label layoutX="558.0" layoutY="191.0" text="Start Location" textFill="#7c7c7c">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="571.0" layoutY="294.0" text="Destination" textFill="#7c7c7c">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
       <Label fx:id="wrong_credentials" layoutX="645.0" layoutY="33.0" prefHeight="17.0" prefWidth="210.0" textFill="RED" />
    </children>
 </AnchorPane>
